# ToDo_AI

./: README.MD  pyproject.toml
project_template/: .coverage  .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
project_template/docs/source/: conf.py  index.rst  modules.rst  project_template.rst
